--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
+body {
+  margin: 0;
+  font: 100 14px 'Roboto';
+  background-color: rgb(27, 27, 27);
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+    
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.container {
+  width: 320px;
+  height: 520px;
+  position: relative;
+  border: 1px solid black;
+}
+
+.calculator-display {
   color: white;
+  background: #1c191c;
+  line-height: 130px;
+  font-size: 6em;
+  
+  flex: 1;
+
+  height: 120px;
+  text-align: right;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  display: block;
+  background: none;
+  border: none;
+  padding: 0;
+  font-family: inherit;
+  user-select: none;
+  cursor: pointer;
+  outline: none;
+  
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active {
+  box-shadow: inset 0px 0px 80px 0px rgba(0,0,0,0.25);
+}
+
+
+.calculator-key.digit-keys {
+  background: #f1f1f1;
+  font-size: 2em;
+}
+
+.calculator-key.function-keys {
+  background: linear-gradient(to bottom, rgba(202,202,204,1) 0%, rgba(196,194,204,1) 100%);
+  font-size: 2em;
+}
+
+.calculator-key.operator-keys {
+  background:  linear-gradient(to bottom, rgba(252,156,23,1) 0%, rgba(247,126,27,1) 100%);
+  color: white;
+  border-right: 0;
+  font-size: 3em;
+}
+
+.calculator-key.key-0 {
+  width: 160px;
+  text-align: left;
+  padding-left: 36px;
+}
+
+.input-keys {
+  display: flex;
+  flex-wrap: wrap-reverse;
+}
+
+.calculator-keypad {
+  height: 400px;
+  display: flex;
+}
+
+.calculator-key {
+  width: 80px;
+  height: 80px;
+  border-top: 1px solid #777;
+  border-right: 1px solid #666;  
+  text-align: center;
+  line-height: 80px;
 }
